# ptyterm

./: .clangd  .gitignore  NEWS  README.md  configure.ac  ptyterm.c
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: code-librarian.agent.md  environment-operations.agent.md  issue-delivery.agent.md  pmo.agent.md
.github/instructions/: src-implementation.instructions.md
.github/workflows/: ci.yml
docs/: ptyterm-session-design.md  release-doc-audit-0.10.0.md
src/: Makefile.am  biopen.c  pbuf.c  ptyterm-control.c  ptyterm-control.h  ptyterm-screen.c  ptyterm-screen.h  ptyterm.c  ptytermd.c  ptywrap.c  test-biopen-help.sh  test-pbuf-copy.sh  test-pbuf-help.sh  test-ptyterm-attach-detach.sh  test-ptyterm-attach-nonblock.sh  test-ptyterm-attach-resize.sh  test-ptyterm-buffer-info.sh  test-ptyterm-create.sh  test-ptyterm-daemon-lifecycle.sh  test-ptyterm-escape-filter.sh  test-ptyterm-help-errors.sh  test-ptyterm-help-format.sh  test-ptyterm-help.sh  test-ptyterm-list.sh  test-ptyterm-recv-format.sh  test-ptyterm-recv-peek-errors.sh  test-ptyterm-recv-wait.sh  test-ptyterm-resize.sh  test-ptyterm-send-recv.sh  test-ptyterm-snapshot.sh  test-ptyterm-status-format.sh  test-ptyterm-view.sh  test-ptyterm-wait-state.sh  test-ptytermd-help.sh  test-ptywrap-help.sh
